nullaway_error_cb70a455-fc9f-486c-a390-af42039027a1.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/graphics/animation/Animation.java:187: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return this.spritesheet;
    ^
    (see http://t.uber.com/nullaway )
